# Agentic-and-Robotic-AI-Engineer

./: Exploring_Gemini_2_0.ipynb  LangChain_Gemini_Tool_Integration.ipynb  LangChain_RAG_Project.ipynb  Understanding APIs, SDKs, and LLM-related Terminology.md  Understanding OpenAI Chat Completion API Parameters  Utilizing_Gemini_API_key.ipynb  helloworld2.rar  langcgain_hello_world.ipynb
athlex-backend/: app.py  database.py
helloworld2/: hello.py  pyproject.toml
helloworld2/src/helloworld2/: __init__.py
helloworld2/src/matrix/: greet.py
